<resources>
    <string name="app_name">QuickCart</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="name1">Name</string>
    <string name="email1">Email</string>
    <string name="password">password</string>
    <string name="password1">Password</string>
    <string name="sign_up">Sign_Up</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_up2">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="signup1">Sign Up</string>
    <string name="sign_in1">Sign In</string>
    <string name="welcome_to_quickcart_store">Welcome To QuickCart Store</string>
    <string name="explore_our_store">Explore Our Store</string>
    <string name="login">LogIn</string>
    <string name="registration">Registration</string>
    <string name="we_are_happy_to_have_you_get_ready_to_buy_fresh_and_freeze_grocery_and_anything_you_want">We are Happy to have you!Get ready to buy fresh and freeze grocery,and Anything you want.</string>
    <string name="header_image">Header Image</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="home1">Home</string>
    <string name="dashboard1">Dashboard</string>
    <string name="search1">Search</string>
    <string name="help1">Help</string>
    <string name="logout">Logout</string>
    <string name="one_stop_shop">One Stop Shop</string>
    <string name="quickcart">QuickCart</string>
    <string name="quickcart1">QuickCart</string>
    <string name="home2">Home</string>
    <string name="dashboard2">DashBoard</string>
    <string name="order_details">Order Details</string>
    <string name="help3">help</string>
    <string name="cart">Cart</string>
    <string name="help4">Help</string>
    <string name="logout4">Logout</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home3">Home</string>
    <string name="dashboard4">Dashboard</string>
    <string name="logging_out">Logging out...</string>
    <string name="search_your_item_here">Search your item here..........</string>
    <string name="popular_products">Popular Products</string>
    <string name="view_all">View All</string>
    <string name="explore_products">Explore Products</string>
    <string name="recommended">Recommended</string>
    <string name="offer">offer</string>
    <string name="popular_products3">Popular Products</string>
    <string name="description">Description</string>
    <string name="_5_0">5.0</string>
    <string name="discount_20_off">Discount 20% OFF</string>
    <string name="category_name">Category Name</string>
    <string name="categoryname5">categoryname</string>
    <string name="category_name6">Category_Name</string>
    <string name="category_name8">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="profile">Profile</string>
    <string name="your_name">Your Name</string>
    <string name="your_email2">Your Email</string>
    <string name="your_address">Your Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="category">Category</string>
    <string name="category3">Category</string>
    <string name="name5">Name</string>
    <string name="description2">Description</string>
    <string name="discount">Discount :</string>
    <string name="_20_off">20% OFF</string>
    <string name="arrow">arrow</string>
    <string name="new_product">New Product</string>
    <string name="sorry_there_is_no_new_product_yet">Sorry There Is No New Product Yet</string>
    <string name="my_orders">My Orders</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="you_have_not_purchased_anything_yet">You have not purchased anything yet</string>
    <string name="price">Price $</string>
    <string name="_30">30</string>
    <string name="price_30_kg">Price :30/kg</string>
    <string name="_5_05">5.0</string>
    <string name="description6">Description</string>
    <string name="apples_are_a_popular_and_versatile_fruit_enjoyed_around_the_world_they_come_in_various_colors_including_red_green_and_yellow_each_with_a_unique_flavor_profile_apples_are_rich_in_vitamins_fiber_and_antioxidants_making_them_a_healthy_snack_option">Apples are a popular and versatile fruit enjoyed around the world. They come in various colors, including red, green, and yellow, each with a unique flavor profile. Apples are rich in vitamins, fiber, and antioxidants, making them a healthy snack option.</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_price_300">Total Price :$300</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_name6">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_price6">Product Price</string>
    <string name="current_date3">Current date</string>
    <string name="current_date5">Current date</string>
    <string name="current_time">Current Time</string>
    <string name="current_time3">Current Time</string>
    <string name="total_price">Total Price</string>
    <string name="total_price3">Total Price</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_quantity2">Total Quantity</string>
    <string name="product_price2">Product Price</string>
    <string name="buy_now3">Buy Now</string>
    <string name="your_order_has_been_placed">Your Order Has Been Placed</string>
    <string name="thankyou_for_purchasing_our_products">ThankYou for Purchasing our Products</string>
    <string name="thankyou_for_purchasing_our_products_n_please_come_again">Thankyou for Purchasing Our Products \n Please Come Again.</string>

</resources>