<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home2"
        android:icon="@drawable/icon_home"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/icon_profile"/>
    <item
        android:id="@+id/category"
        android:title="@string/category"
        android:icon="@drawable/icon_cat"/>
    <item
        android:id="@+id/orders"
        android:title="@string/my_orders"
        android:icon="@drawable/icon_orders"/>
    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/icon_cart"/>
    <item
        android:id="@+id/new_product"
        android:title="@string/new_product"
        android:icon="@drawable/icon_product"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout4"
        android:icon="@drawable/icon_logout"/>




</menu>