<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <ImageView
            android:id="@+id/pop_image"
            android:layout_width="280dp"
            android:layout_height="190dp"
            android:src="@mipmap/offers3"
            android:contentDescription="@string/offer" />
        <TextView
            android:id="@+id/pop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/popular_products3"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/pop_des"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/description"/> 
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:src="@drawable/ratingbar"
                android:layout_marginStart="-5dp"
                />
            <TextView
                android:id="@+id/pop_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/_5_0"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"/>
            <TextView
                android:id="@+id/pop_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/discount_20_off"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="end"
                android:fontFamily="@font/aclonica"/>





        </LinearLayout>




    </LinearLayout>

</androidx.cardview.widget.CardView>