<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/view_all_img"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/download"
            android:contentDescription="@string/header_image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/aclonica"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/name5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description2"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/aclonica"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/aclonica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"/>

                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/view_price"
                    android:fontFamily="@font/aclonica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_30"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ratingbar"
                    android:layout_marginStart="-5dp"/>

                <TextView
                    android:id="@+id/view_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_5_0"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"/>
            </LinearLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/copy_of_ic_baseline_arrow_forward_ios_24"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/arrow"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
