<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lime1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cat_nav_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/download"
            android:contentDescription="@string/header_image"
            android:background="@drawable/border"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_cat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name5"
                android:textSize="25sp"
                android:fontFamily="@font/aclonica"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/nav_cat_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description2"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/aclonica"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/aclonica"/>

            <TextView
                android:id="@+id/nav_cat_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20_off"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:fontFamily="@font/aclonica"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_arrow"
                android:layout_gravity="end"
                android:background="@color/lime"
                android:contentDescription="@string/arrow" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
