<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/y1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cat_nav_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/download"
            android:contentDescription="@string/header_image"
            android:background="@color/y7"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_cat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name5"
                android:textSize="21sp"
                android:fontFamily="@font/aclonica"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textStyle="bold"
                android:textColor="@color/lime"/>



            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price2"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="@color/lime1"
                android:fontFamily="@font/aclonica"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_item"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/add_circle"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textColor="@color/lime2"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:id="@+id/remove_item"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/remove"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buy_now1"
                android:layout_width="84dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/lime"
                android:fontFamily="@font/aclonica"
                android:text="@string/buy_now3"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_gravity="end"
               />




        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
