<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity">

    <ImageView
        android:id="@+id/detailed_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:background="@color/y1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/lime"
        app:title="Detailed Products">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/detailed_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/price_30_kg"
        android:textColor="@color/teal_700"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ratingbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img" />

    <TextView
        android:id="@+id/detailed_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/_5_05"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/description6"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_price" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/apples_are_a_popular_and_versatile_fruit_enjoyed_around_the_world_they_come_in_various_colors_including_red_green_and_yellow_each_with_a_unique_flavor_profile_apples_are_rich_in_vitamins_fiber_and_antioxidants_making_them_a_healthy_snack_option"
        android:textAlignment="center"
        android:id="@+id/detailed_description"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/y1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </RelativeLayout>

    <ImageView
        android:id="@+id/add_item"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="6dp"
        android:src="@drawable/add_circle"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_1"
        android:textColor="@color/orange"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/add_item"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <ImageView
        android:id="@+id/remove_item"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/remove"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_to_cart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@color/lime"
        android:fontFamily="@font/aclonica"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />







</androidx.constraintlayout.widget.ConstraintLayout>